Troubleshooting links for deployment (About page)

--- a/html/about-gates.html
+++ b/html/about-gates.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About GATES | DOST-ASTI</title>
-    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/header-footer.css" />
-    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/search.css">
+    <link rel="stylesheet" href="../css/header-footer.css" />
+    <link rel="stylesheet" href="../css/search.css">
     <link rel="stylesheet" href="../css/about-gates.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,9 +21,9 @@
     <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/dashboard.css" />
-    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/dashboard-widget.css" />
-    <script src="../asti-gates-profile.github.io/js/dashboard-widget.js" defer></script>
+    <link rel="stylesheet" href="../css/dashboard.css" />
+    <link rel="stylesheet" href="../css/dashboard-widget.css" />
+    <script src="../js/dashboard-widget.js" defer></script>
 
 </head>
 </head>
@@ -160,8 +160,8 @@
                         </div>
                     </div>
 
-                    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/stats.css">
-                    <script src="../asti-gates-profile.github.io/js/stats.js"></script>
+                    <link rel="stylesheet" href="../css/stats.css">
+                    <script src="../js/stats.js"></script>
 
                 </div>
             </div>
