--- a/html/ai.html
+++ b/html/ai.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Team | GATES Project</title>
-    <link rel="stylesheet" href="/css/ai.css">
-    <link rel="stylesheet" href="/css/header-footer.css">
-    <link rel="stylesheet" href="/css/our-team-modal.css">
+    <link rel="stylesheet" href="../css/ai.css">
+    <link rel="stylesheet" href="../css/header-footer.css">
+    <link rel="stylesheet" href="../css/our-team-modal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="icon" type="image/png" href="/images/Storm_Cloud.png">
+    <link rel="icon" type="image/png" href="../images/Storm_Cloud.png">
 
-    <script src="/js/navbar-loader.js" defer></script>
-    <script src="/js/our-team-modal.js" defer></script>
+    <script src="../js/navbar-loader.js" defer></script>
+    <script src="../js/our-team-modal.js" defer></script>
 
 </head>
 
@@ -31,7 +31,7 @@
 
         <div class="card" style="background-image: url('/images/stock-1.jpg');">
             <div class="profile-card" onclick="showStaffModal('jasper-castro')">
-                <img class="profile-pic" src="/images/ai-team_jasper-castro.png" alt="Jasper Adrian Dwight V. Castro">
+                <img class="profile-pic" src="../images/ai-team_jasper-castro.png" alt="Jasper Adrian Dwight V. Castro">
                 <div class="profile-description">
                     <p class="name">Jasper Adrian Dwight V. Castro</p>
                     <p class="position">Project Technical Specialist IV - Natural Language Processing Engineer</p>
