Troubleshooting links for deployment (AI page)

--- a/html/ai.html
+++ b/html/ai.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Team | GATES Project</title>
-    <link rel="stylesheet" href="../css/ai.css">
+    <link rel="stylesheet" href="/css/ai.css">
     <link rel="stylesheet" href="../css/header-footer.css">
     <link rel="stylesheet" href="../css/our-team-modal.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
@@ -29,7 +29,7 @@
             qui officia deserunt mollit anim id est laborum.</p>
         <br>
 
-        <div class="card" style="background-image: url('/images/stock-1.jpg');">
+        <div class="card" style="background-image: url('../images/stock-1.jpg');">
             <div class="profile-card" onclick="showStaffModal('jasper-castro')">
                 <img class="profile-pic" src="../images/ai-team_jasper-castro.png" alt="Jasper Adrian Dwight V. Castro">
                 <div class="profile-description">
