--- a/html/about-gates.html
+++ b/html/about-gates.html
@@ -12,9 +12,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-    <link rel="icon" type="image/png" href="../asti-gates-profile.github.io/images/Storm_Cloud.png">
-    <script src="../asti-gates-profile.github.io/js/navbar-loader.js" defer></script>
-    <script src="../asti-gates-profile.github.io/js/dashboard.js"></script>
+    <link rel="icon" type="image/png" href="../images/Storm_Cloud.png">
+    <script src="../navbar-loader.js" defer></script>
+    <script src="../js/dashboard.js"></script>
     <script src="../https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="../https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -159,10 +159,6 @@
                             </p>
                         </div>
                     </div>
-
-                    <link rel="stylesheet" href="../css/stats.css">
-                    <script src="../js/stats.js"></script>
-
                 </div>
             </div>
 
