Troubleshooting links for deployment (Platform page)

--- a/html/about-gates.html
+++ b/html/about-gates.html
@@ -13,7 +13,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
     <link rel="icon" type="image/png" href="../images/Storm_Cloud.png">
-    <script src="../navbar-loader.js" defer></script>
+    <script src="../js/navbar-loader.js" defer></script>
     <script src="../js/dashboard.js"></script>
     <script src="../https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="../https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
