Troubleshooting links (our team)

--- a/html/contact-us.html
+++ b/html/contact-us.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us | GATES Project</title>
-    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/header-footer.css" />
-    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/search.css" />
-    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/Contact-Us-style.css" />
+    <link rel="stylesheet" href="../css/header-footer.css" />
+    <link rel="stylesheet" href="../css/search.css" />
+    <link rel="stylesheet" href="../css/Contact-Us-style.css" />
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="icon" type="image/png" href="../asti-gates-profile.github.io/images/Storm_Cloud.png">
+    <link rel="icon" type="image/png" href="../images/Storm_Cloud.png">
   
     <script src="../js/navbar-loader.js" defer></script>
 </head>
