--- a/html/mission-vision.html
+++ b/html/mission-vision.html
@@ -7,14 +7,14 @@
 
   <title>Mission & Vision | GATES Project</title>
 
-  <link rel="stylesheet" href="../asti-gates-profile.github.io/css/header-footer.css">
-  <link rel="stylesheet" href="../asti-gates-profile.github.io/asti-gates-profile.github.io/css/mission-vision.css">
+  <link rel="stylesheet" href="../css/header-footer.css">
+  <link rel="stylesheet" href="../css/mission-vision.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="icon" type="image/png" href="../asti-gates-profile.github.io/images/asti-logo.png">
-  <script src="../asti-gates-profile.github.io/js/loadFooter.js" defer></script>
-  <script src="../asti-gates-profile.github.io/js/navbar-loader.js" defer></script>
+  <link rel="icon" type="image/png" href="../images/asti-logo.png">
+  <script src="../js/loadFooter.js" defer></script>
+  <script src="../js/navbar-loader.js" defer></script>
 
 </head>
 
