Created a separate search.js file

--- a/html/about-gates.html
+++ b/html/about-gates.html
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="../css/dashboard.css" />
     <link rel="stylesheet" href="../css/dashboard-widget.css" />
     <script src="../js/dashboard-widget.js" defer></script>
+    <script src="../js/search.js" defer></script>
 
 </head>
 </head>
