--- a/html/ai.html
+++ b/html/ai.html
@@ -15,6 +15,7 @@
 
     <script src="../js/navbar-loader.js" defer></script>
     <script src="../js/our-team-modal.js" defer></script>
+    <script src="../js/search.js" defer></script>
 
 </head>
 
