--- a/html/mission-vision.html
+++ b/html/mission-vision.html
@@ -15,6 +15,7 @@
   <link rel="icon" type="image/png" href="../images/asti-logo.png">
   <script src="../js/loadFooter.js" defer></script>
   <script src="../js/navbar-loader.js" defer></script>
+  <script src="../js/search.js" defer></script>
 
 </head>
 
