--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <title>GATES | DOST-ASTI</title>
     </style>
     <!-- CSS Files -->
-    <link rel="stylesheet" href="../css/home.css" />
-    <link rel="stylesheet" href="../css/search.css" />
-    <link rel="stylesheet" href="../css/header-footer.css" />
-    <link rel="stylesheet" href="../css/slideshow.css" />
-    <link rel="stylesheet" href="../css/search.css" />
-    <link rel="stylesheet" href="../css/dashboard.css" />
-    <link rel="stylesheet" href="../css/navbar-overlay.css" />
-    <link rel="stylesheet" href="../css/dashboard-widget.css" />
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/home.css" />
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/search.css" />
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/header-footer.css" />
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/slideshow.css" />
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/search.css" />
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/dashboard.css" />
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/navbar-overlay.css" />
+    <link rel="stylesheet" href="../asti-gates-profile.github.io/css/dashboard-widget.css" />
 
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300;700&display=swap"
         rel="stylesheet">
@@ -36,13 +36,13 @@
 
 
 
-    <script src="../js/dashboard-widget.js" defer></script>
-    <script src="../js/slideshow.js" defer></script>
-    <script src="../js/scroll.js" defer></script>
-    <script src="../js/scroll-animation.js" defer></script>
-    <script src="../js/dashboard.js"></script>
-    <script src="../js/search.js" defer></script>
-    <script src="../https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script src="../asti-gates-profile.github.io/js/dashboard-widget.js" defer></script>
+    <script src="../asti-gates-profile.github.io/js/slideshow.js" defer></script>
+    <script src="../asti-gates-profile.github.io/js/scroll.js" defer></script>
+    <script src="../asti-gates-profile.github.io/js/scroll-animation.js" defer></script>
+    <script src="../asti-gates-profile.github.io/js/dashboard.js"></script>
+    <script src="../asti-gates-profile.github.io/js/search.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/ScrollTrigger.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
@@ -54,7 +54,7 @@
 
     <nav class="nav"></nav>
     <div id="navbar"></div>
-    <script src="../js/navbar-loader.js"></script>
+    <script src="../asti-gates-profile.github.io/js/navbar-loader.js"></script>
 
     <main>
         <div class="slideshow-overlay">
@@ -67,13 +67,13 @@
 
         <div class="slideshow-container">
             <div class="slide fade">
-                <img src="../images/SLIDESHOW1.jpg.webp" alt="Slide 1">
+                <img src="../asti-gates-profile.github.io/images/SLIDESHOW1.jpg.webp" alt="Slide 1">
             </div>
             <div class="slide fade">
-                <img src="../images/img1.jpg" alt="Slide 2">
+                <img src="../asti-gates-profile.github.io/images/img1.jpg" alt="Slide 2">
             </div>
             <div class="slide fade">
-                <img src="../images/img3.jpg" alt="Slide 3">
+                <img src="../asti-gates-profile.github.io/images/img3.jpg" alt="Slide 3">
             </div>
 
 
