--- a/html/interns.html
+++ b/html/interns.html
@@ -29,21 +29,21 @@
         <br>
         <div class="card" style="background-image: url('../images/stock-1.jpg');">
             <div class="profile-card" onclick="showStaffModal('joshua-birad')">
-                <img class="profile-pic" src="../images/josh.jpeg" alt="Name">
+                <img class="profile-pic" src="../images/gudetama.jpg" alt="Name">
                 <div class="profile-description">
                     <p class="name">Joshua P. Birad</p>
                     <p class="position">Intern</p>
                 </div>
             </div>
             <div class="profile-card" onclick="showStaffModal('janelle-lam')">
-                <img class="profile-pic" src="../images/josh.jpeg" alt="Name">
+                <img class="profile-pic" src="../images/pompom.jpg" alt="Name">
                 <div class="profile-description">
                     <p class="name">Janelle Lam</p>
                     <p class="position">Intern</p>
                 </div>
             </div>
             <div class="profile-card" onclick="showStaffModal('nathan-lim')">
-                <img class="profile-pic" src="../images/josh.jpeg" alt="Nathan Lim">
+                <img class="profile-pic" src="../images/chococat.jpg" alt="Nathan Lim">
                 <div class="profile-description">
                     <p class="name">Nathan Lim</p>
                     <p class="position">Intern</p>
@@ -52,14 +52,14 @@
         </div>
         <div class="card" style="background-image: url('../images/stock-2.jpg');">
             <div class="profile-card" onclick="showStaffModal('matt-ormilon')">
-                <img class="profile-pic" src="../images/josh.jpeg" alt="Matthew Ormilon">
+                <img class="profile-pic" src="../images/keroppi.jpg" alt="Matthew Ormilon">
                 <div class="profile-description">
                     <p class="name">Matthew Ormilon</p>
                     <p class="position">Intern</p>
                 </div>
             </div>
             <div class="profile-card" onclick="showStaffModal('pauline-young')">
-                <img class="profile-pic" src="../images/josh.jpeg" alt="Pauline Young">
+                <img class="profile-pic" src="../images/cinnamoroll.jpg" alt="Pauline Young">
                 <div class="profile-description">
                     <p class="name">Pauline Young</p>
                     <p class="position">Intern</p>
