Fixed errors in AI page

--- a/html/ai.html
+++ b/html/ai.html
@@ -41,6 +41,7 @@
 
             <div class="profile-card" onclick="showStaffModal('john-dumalag')">
                 <img class="profile-pic" src="../images/josh.jpeg">
+                <div class="profile-description">
                     <p class="name">John Bart C. Dumalag</p>
                     <p class="position">Position</p>
                 </div>
