--- a/html/management.html
+++ b/html/management.html
@@ -62,7 +62,7 @@
             </div>
         </div>
 
-        <div class="card" style="background-image: url('../asti-gates-profile.github.io/images/stock-2.jpg');">
+        <div class="card" style="background-image: url('../images/stock-2.jpg');">
             <div class="profile-card" onclick="showStaffModal('chelsea-abellana')">
                 <img class="profile-pic" src="../images/management_chelsea-abellana.jpg" alt="Chelsea Abellana">
                 <div class="profile-description">
