Updated team descriptions and added some incomplete info for staff profiles

--- a/html/management.html
+++ b/html/management.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="icon" type="image/png" href="../images/Storm_Cloud.png">
+    <link rel="icon" type="image/png" href="../images/asti-logo.png">
   
 
     <script src="../js/navbar-loader.js" defer></script>
@@ -28,20 +28,16 @@
     <div id="navbar"></div>
     <main>
         <h1 class="team-name">MANAGEMENT</h1>
-        <p class="team-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-            qui officia deserunt mollit anim id est laborum.</p>
+        <p class="team-description">The Management and Policy Team is responsible for guiding project operations in line with DOST-ASTI and national directives. They handle policy formulation, administrative management, and stakeholder coordination to ensure smooth implementation. Their work bridges technical execution with strategic governance.</p>
         <br>
 
         <div class="card" style="background-image: url('../images/stock-1.jpg');">
             
             <div class="profile-card" onclick="showStaffModal('alvin-retamar')">
-                <img class="profile-pic" src="../images/josh.jpeg" alt="Alvin E. Retamar">
+                <img class="profile-pic" src="" alt="Alvin E. Retamar">
                 <div class="profile-description">
                     <p class="name">Alvin E. Retamar</p>
-                    <p class="position">Position</p>
+                    <p class="position">Chief Science Research Specialist / Project Leader</p>
                 </div>
             </div>
 
