--- a/html/ai.html
+++ b/html/ai.html
@@ -23,11 +23,12 @@
     <div id="navbar"></div>
     <main>
         <h1 class="team-name">AI TEAM</h1>
-        <p class="team-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-            qui officia deserunt mollit anim id est laborum.</p>
+        <p class="team-description">The GATES AI Team is a multidisciplinary group of AI engineers, data scientists, and GIS/RS
+specialists responsible for designing, building, and operationalizing the GATES AI platform. We
+integrate scalable lakehouse architecture with machine learning, business intelligence, and predictive
+analytics to deliver AI-driven solutions, automated pipelines, and production-grade models. Mission-
+driven and collaborative, we turn raw data into insight-rich outputs that enable evidence-based
+decisions.</p>
         <br>
 
         <div class="card" style="background-image: url('../images/stock-1.jpg');">
