--- a/html/contact-us.html
+++ b/html/contact-us.html
@@ -35,23 +35,23 @@
                     <tbody>
                         <tr>
                             <td>Alvin E. Retamar</td>
-                            <td>Position</td>
-                            <td>Email</td>
+                            <td>Chief Science Research Specialist / Project Leader</td>
+                            <td><a href="mailto:ning@asti.dost.gov.ph">ning@asti.dost.gov.ph</a></td>
                         </tr>
                         <tr>
                             <td>John Chris T. Kwong</td>
                             <td>S&T Fellow I</td>
-                            <td>johnchris.kwong@asti.dost.gov.ph</td>
+                            <td><a href="mailto:johnchris.kwong@asti.dost.gov.ph">johnchris.kwong@asti.dost.gov.ph</a></td>
                         </tr>
                         <tr>
                             <td>Charmaine Ann S. Manalo</td>
                             <td>Project Technical Specialist IV / Senior Project Manager</td>
-                            <td>ann@asti.dost.gov.ph</td>
+                            <td><a href="mailto:ann@asti.dost.gov.ph">ann@asti.dost.gov.ph</a></td>
                         </tr>
                         <tr>
                             <td>Chelsea Rica M. Abellana</td>
-                            <td>Project Technical Assistant VI - Junior Technology, Policy, and Sustainability Officer</td>
-                            <td>chelsearica.abellana@asti.dost.gov.ph</td>
+                            <td>Project Technical Assistant VI / Junior Technology, Policy, and Sustainability Officer</td>
+                            <td><a href="mailto:chelsearica.abellana@asti.dost.gov.ph">chelsearica.abellana@asti.dost.gov.ph</a></td>
                         </tr>
                         <tr>
                             <td>Marvie Joy C. Evangelista</td>
