--- a/html/interns.html
+++ b/html/interns.html
@@ -21,11 +21,7 @@
     <div id="navbar"></div>
     <main>
         <h1 class="team-name">INTERNS</h1>
-        <p class="team-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-            qui officia deserunt mollit anim id est laborum.</p>
+        <p class="team-description">The interns are in charge of </p>
         <br>
         <div class="card" style="background-image: url('../images/stock-1.jpg');">
             <div class="profile-card" onclick="showStaffModal('joshua-birad')">
