--- a/html/platform.html
+++ b/html/platform.html
@@ -30,17 +30,13 @@
     <div id="navbar"></div>
     <main>
         <h1 class="team-name">PLATFORM TEAM</h1>
-        <p class="team-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-            incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-            laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit
-            esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa
-            qui officia deserunt mollit anim id est laborum.</p>
+        <p class="team-description">The GATES Platform Team builds core applications like the GIS Chatbot, Analytics Dashboard, and API Platform to give consumers direct access to the AI features. The team works closely with the AI Team to integrate new features and services into the platform. The team also collaborates with the Data Lakehouse Team to ensure the platform operates in a secure and reliable environment.</p>
         <div class="card" style="background-image: url('../images/stock-1.jpg');">
             <div class="profile-card" onclick="showStaffModal('albert-francisco')">
-                <img class="profile-pic" src="../images/josh.jpeg" alt="Albert A. Francisco">
+                <img class="profile-pic" src="../images/platform_albert-francisco.jpg" alt="Albert A. Francisco">
                 <div class="profile-description">
                     <p class="name">Albert A. Francisco</p>
-                    <p class="position">Position</p>
+                    <p class="position">Project Technical Specialist V - Lead Web Developer</p>
                 </div>
             </div>
 
