--- a/html/interns.html
+++ b/html/interns.html
@@ -7,6 +7,8 @@
     
     <title>Interns | GATES Project</title>
     
+    <link rel="icon" type="image/png" href="../images/asti-logo.png">
+
     <link rel="stylesheet" href="../css/interns.css">
     <link rel="stylesheet" href="../css/header-footer.css">
     <link rel="stylesheet" href="../css/our-team-modal.css">
