--- a/html/lakehouse.html
+++ b/html/lakehouse.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="icon" type="image/png" href="../images/Storm_Cloud.png">
+    <link rel="icon" type="image/png" href="../images/asti-logo.png">
 
     <script src="../js/navbar-loader.js" defer></script>
     <script src="../js/our-team-modal.js" defer></script>
