Updated about GATES information

--- a/html/about-gates.html
+++ b/html/about-gates.html
@@ -38,12 +38,10 @@
     <main>
         <section class="about">
             <h1>ABOUT GATES</h1>
-            <p>The Geospatial Analytics and Technology Solution (GATES Project) is designed to enhance the use of
-                geospatial science in tackling vital challenges, including disaster risk reduction, urban planning,
-                and
-                environmental management. This initiative is intended for government adoption to help reduce
-                disaster
-                risks, address urban planning issues, and improve scientific datasets for managing the environment.
+            <p>The Geospatial Analytics and Technology Solutions (GATES Project) is designed to harness the vast data and 
+                information generated across DOST agencies. By leveraging advanced technologies such as artifical intelligence, 
+                machine learning, and big data analytics, GATES aims to transform this wealth of information into actionable insights,
+                enabling data-driven decision making and strategic planning to enhance governance and innovation. 
             </p>
         </section>
         <br>
