--- a/html/platform.html
+++ b/html/platform.html
@@ -67,10 +67,10 @@
                 </div>
             </div>
             <div class="profile-card" onclick="showStaffModal('nathaniel-mayquez')">
-                <img class="profile-pic" src="../images/josh.jpeg" alt="Name of Team Member">
+                <img class="profile-pic" src="../images/platform_nathaniel-mayquez.png" alt="Nathaniel R. Mayquez">
                 <div class="profile-description">
                     <p class="name">Nathaniel R. Mayquez</p>
-                    <p class="position">Position</p>
+                    <p class="position">Project Technical Specialist II - Frontend Dev & UI/UX</p>
                 </div>
             </div>
         </div> 
