--- a/html/ai.html
+++ b/html/ai.html
@@ -41,10 +41,10 @@ decisions.</p>
             </div>
 
             <div class="profile-card" onclick="showStaffModal('john-dumalag')">
-                <img class="profile-pic" src="../images/josh.jpeg">
+                <img class="profile-pic" src="../images/ai-team_john_bart _dumalag.jpg">
                 <div class="profile-description">
                     <p class="name">John Bart C. Dumalag</p>
-                    <p class="position">Position</p>
+                    <p class="position">Project Technical Specialist IV</p>
                 </div>
             </div>
 
