--- a/html/management.html
+++ b/html/management.html
@@ -68,10 +68,10 @@
             </div>
 
             <div class="profile-card" onclick="showStaffModal('marvie-evangelista')">
-                <img class="profile-pic" src="../images/josh.jpeg" alt="Marvie Joy C. Evangelista">
+                <img class="profile-pic" src="../images/management-Marvie_Evangelista.jpeg" alt="Marvie Joy C. Evangelista">
                 <div class="profile-description">
                     <p class="name">Marvie Joy C. Evangelista</p>
-                    <p class="position">Position</p>
+                    <p class="position">PTA VI - Technical Writer</p>
                 </div>
             </div>
         </div>
