--- a/html/contact-us.html
+++ b/html/contact-us.html
@@ -55,8 +55,8 @@
                         </tr>
                         <tr>
                             <td>Marvie Joy C. Evangelista</td>
-                            <td>Position</td>
-                            <td>Email</td>
+                            <td>PTA VI - Technical Writer</td>
+                            <td><a href="marviejoy.evangelista@asti.dost.gov.ph">marviejoy.evangelista@asti.dost.gov.ph</td>
                         </tr>
                     </tbody>
                 </table>
