Fixed modal bug

--- a/html/interns.html
+++ b/html/interns.html
@@ -23,7 +23,7 @@
     <div id="navbar"></div>
     <main>
         <h1 class="team-name">INTERNS</h1>
-        <p class="team-description">The interns are in charge of </p>
+        <p class="team-description">The interns are in charge of developing this website.</p>
         <br>
         <div class="card" style="background-image: url('../images/stock-1.jpg');">
             <div class="profile-card" onclick="showStaffModal('joshua-birad')">
