Fixed hover effect in contact page

--- a/html/contact-us.html
+++ b/html/contact-us.html
@@ -36,27 +36,27 @@
                         <tr>
                             <td>Alvin E. Retamar</td>
                             <td>Chief Science Research Specialist / Project Leader</td>
-                            <td><a href="mailto:ning@asti.dost.gov.ph">ning@asti.dost.gov.ph</a></td>
+                            <td><a href="mailto:ning@asti.dost.gov.ph" class="email-link">ning@asti.dost.gov.ph</a></td>
                         </tr>
                         <tr>
                             <td>John Chris T. Kwong</td>
                             <td>S&T Fellow I</td>
-                            <td><a href="mailto:johnchris.kwong@asti.dost.gov.ph">johnchris.kwong@asti.dost.gov.ph</a></td>
+                            <td><a href="mailto:johnchris.kwong@asti.dost.gov.ph" class="email-link">johnchris.kwong@asti.dost.gov.ph</a></td>
                         </tr>
                         <tr>
                             <td>Charmaine Ann S. Manalo</td>
-                            <td>Project Technical Specialist IV / Senior Project Manager</td>
-                            <td><a href="mailto:ann@asti.dost.gov.ph">ann@asti.dost.gov.ph</a></td>
+                            <td>Project Technical Specialist IV - Senior Project Manager</td>
+                            <td><a href="mailto:ann@asti.dost.gov.ph" class="email-link">ann@asti.dost.gov.ph</a></td>
                         </tr>
                         <tr>
                             <td>Chelsea Rica M. Abellana</td>
-                            <td>Project Technical Assistant VI / Junior Technology, Policy, and Sustainability Officer</td>
-                            <td><a href="mailto:chelsearica.abellana@asti.dost.gov.ph">chelsearica.abellana@asti.dost.gov.ph</a></td>
+                            <td>Project Technical Assistant VI - Junior Technology, Policy, and Sustainability Officer</td>
+                            <td><a href="mailto:chelsearica.abellana@asti.dost.gov.ph" class="email-link">chelsearica.abellana@asti.dost.gov.ph</a></td>
                         </tr>
                         <tr>
                             <td>Marvie Joy C. Evangelista</td>
-                            <td>PTA VI - Technical Writer</td>
-                            <td><a href="marviejoy.evangelista@asti.dost.gov.ph">marviejoy.evangelista@asti.dost.gov.ph</td>
+                            <td>Project Technical Assistant VI - Technical Writer</td>
+                            <td><a href="mailto:marviejoy.evangelista@asti.dost.gov.ph" class="email-link">marviejoy.evangelista@asti.dost.gov.ph</a></td>
                         </tr>
                     </tbody>
                 </table>
